# f150-mechanic

./: .env.example  .gitignore  README.md  langgraph.json  main.py  main_chain.py  main_f150.py  main_graph.py  main_weather.py  pyproject.toml  test_chunking.py  test_prompts.md  test_vector_store.py
.claude/: context.md  graph_architecture.md
examples/: tool_calling_comparison.md
src/: config.py
src/agent/: __init__.py  f150_agent.py  weather_agent.py
src/graph/: __init__.py  chat_agent_node.py  f150_graph.py  rag_agent_node.py  state.py  token_tracking_node.py
src/prompts/: system_prompt.py
src/rag/: __init__.py  document_loader.py  embeddings.py  vector_store.py
src/tools/: __init__.py  location.py  manual_search.py  weather.py  web_search.py
src/utils/: __init__.py  approval_node.py  conversational_filter.py  token_counter.py  token_counter_graph.py
tests/: bugged-convo-1.md  test_embeddings.py  test_ollama_token_counter.py  test_web_search.py
wiki/: future_features.md  test_prompts.md
